--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: mayuan120226@163.com
 description: ""
 keyword: ""
 url: "https://msg901216.github.io"              # your host, for absolute URL
-baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
