--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "多读书，读好书，多记笔记，不断完善自己。"
-sidebar-avatar: img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: https://github.com/msg901216/msg901216.github.io/blob/master/img/avatar-hux.jpeg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -86,15 +86,6 @@ friends: [
         href: "https://msg901216.github.io"
     },{
         title: "Foo",
-        href: "#"
-    },{
-        title: "Bar",
-        href: "#"
-    },{
-        title: "Example Friends",
-        href: "#"
-    },{
-        title: "It helps SEO",
         href: "#"
     }
 ]
