--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 # SNS settings
-RSS: false
-weibo_username:     msg
-zhihu_username:     msg
-github_username:    msg901216
+# RSS: false
+# weibo_username:     msg
+# zhihu_username:     msg
+# github_username:    msg901216
 #twitter_username:  msg
 #facebook_username:  msg
 
@@ -80,12 +80,12 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 
 
 # Friends
-friends: [
-    {
-        title: "MSG Blog",
-        href: "https://msg901216.github.io"
-    },{
-        title: "Foo",
-        href: "#"
-    }
-]
+# friends: [
+#     {
+#         title: "MSG Blog",
+#         href: "https://msg901216.github.io"
+#     },{
+#         title: "Foo",
+#         href: "#"
+#     }
+# ]
