--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 慢时光的读书笔记
-SEOTitle: 读书笔记 | Reading Blog
+title: 慢时光的学习笔记
+SEOTitle: 学习笔记 | Reading Blog
 header-img: img/home-bg.jpg
 email: mayuan120226@163.com
 description: ""
@@ -36,7 +36,7 @@ kramdown:
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "多读书，读好书，多记笔记，不断完善自己。"
+sidebar-about-description: "多学习，多读书，多记笔记，不断完善自己。"
 sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
