--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg.jpg
 email: mayuan120226@163.com
 description: ""
 keyword: ""
-url: "https://msg901216.github.io"              # your host, for absolute URL
+url: "https://msgi.github.io"              # your host, for absolute URL
 baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
