--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 慢时光的学习笔记
-SEOTitle: 学习笔记 | Reading Blog
+title: 机器学习与自然语言处理
+SEOTitle: 机器学习、深度学习、自然语言处理
 header-img: img/home-bg.jpg
 email: mayuan120226@163.com
 description: ""
